--- a/notebooks/sample_patches_brca.ipynb
+++ b/notebooks/sample_patches_brca.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "MAG = \"1_25x\" # The sample dataset has 20x, 10x, 5x, 2_5x and 1_25x data\n",
     "\n",
-    "ds = load_dataset(\"StonyBrook-CVLab/ZoomLDM-demo-dataset\", name=MAG, trust_remote_code=True, split='train')\n",
+    "ds = load_dataset(\"StonyBrook-CVLab/ZoomLDM-demo-dataset-BRCA\", name=MAG, trust_remote_code=True, split='train')\n",
     "dl = DataLoader(ds, batch_size=4, collate_fn = collate_fn)"
    ]
   },
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
